--- a/styles.css
+++ b/styles.css
@@ -5,10 +5,12 @@
   box-sizing: border-box;
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
   list-style: none;
+  color: white;
   text-decoration: none;
 }
   html{
    scroll-behavior: smooth;
+   background-color: #001f3f;;
   }
 body {
   margin: 0;
@@ -16,7 +18,7 @@ body {
 }
 
 .navbar {
-  background-color: blue;
+  background-color: teal;
   color: white;
   display: flex;
   align-items: center;
@@ -36,7 +38,7 @@ body {
 .navbar-brand {
   font-size: 40px;
   font-weight: bold;
-  color: black;
+  color: white;
  text-transform: uppercase;
 }
 
@@ -73,14 +75,12 @@ body {
  .navbar-menu a:hover{
   color: #ff7518;
   transition: 0.5s;
- }
-#home{
-  height: 600px;
-  width:100%;
-  background-image: url(file:///C:/Users/User/Downloads/g.jpg);  
-  background-size: cover;
-  background-position: center;
+ 
    }
+    #home{
+      height: 800px;
+      width:100%;
+    }
 .name {
   position: absolute;
   top: 40%;
@@ -113,36 +113,63 @@ body {
 
         height: 800px;
           width:100%;
-         background-image: url(file:///C:/Users/User/Downloads/g.jpg);  
-         background-size: cover;
-         background-position: center;
     }
+    #about img{
+      width: 500px;
+      height:500px;
+      float: right;
+      margin-right: 25%;
+      margin-top: 2%;
+     }
 
        #about h2{
         font-size: 40px;
         text-align: center;
        }
-        #about p{
-          width: 400px;
-          font-size: 28px;
-          margin: 0 auto;
-          text-align: left;
-        }
+       #about p{
+        width: 400px;
+        font-size: 28px;
+        text-align: left;
+        margin: 0 10%;
+        cursor: pointer;
+        color: white;
+      }
         #services{
           height: 100vh;
-          width:100%;
-          background-image: url(file:///C:/Users/User/Downloads/g.jpg);  
-          background-size: cover;
-          background-position: center;
+          width:100%; 
            } 
             #services h1{
               font-size: 60px;
               text-align: center;
             }
              #services h2{
-             font-size: 39px;
+             font-size: 30px;
              text-align: center;
              }
+             #services .wrapper{
+              display: flex;
+             position: relative;
+              margin: 0 430px;
+             
+             }
+               #services .box{
+                 text-align: center;
+                  background-color: teal;
+                  width: 250px;
+                  height: 190px;
+                   border-radius: 10px;
+                    margin: 0 50px;
+               }
+               #services .box-2{
+                background-color: teal;
+                width: 250px;
+                text-align: center;
+    
+                height: 190px;
+                 border-radius: 10px;
+                margin: 0 50px;
+             }
+    
               #services h3{
                 width: 800px;
                 font-size: 19px;
@@ -150,13 +177,50 @@ body {
                 text-align: left;
                 overflow: hidden;
               }
+         
+            #skills{
+             background-color: #001f3f;
+         height: 100vh;
+         width:100%;
+            }
+         #skills h1{
+           text-align: center;
+           font-size: 60px;
+           color: white;
+         }
+         #skills .wrapper-2{
+           display: flex;
+          position: relative;
+           margin: 0 430px;
+          }
+           #skills h2{
+             color: white;
+             text-align: center;
+           }
+           #skills li{
+             font-size: 28px;
+           }
+            #skills .skill-1{
+              text-align: center;
+               background-color: teal;
+               width: 250px;
+               height: 190px;
+                border-radius: 10px;
+                 margin: 0 50px;
+            }
+            #skills .skill-2{
+             background-color: teal;
+             width: 250px;
+             text-align: center;
+             height: 190px;
+              border-radius: 10px;
+             margin: 0 50px;
+          }
                #contact{
                  overflow: hidden;
                 height: 100vh;
                 width:100%;
-                background-image: url(file:///C:/Users/User/Downloads/g.jpg);  
-                background-size: cover;
-                background-position: center;
+               
                }
                #contact h1{
                 font-size: 50px;
@@ -170,117 +234,113 @@ body {
                 }
                 #contact img{
                   margin:0 200px;
-                   justify-content: center;
                     width: 40px;
                     height: 40px;
                  }
 
-@media (max-width: 450px) {
-    .navbar-menu {
-      display: none;
-      flex-direction: column;
-      position: absolute;
-      top: 40px;
-      left: 0;
-      height: 100vh;
-      width: 140px;
-      background-color: blue;
-      padding: 10px;
-
-  }
-   .navbar{
-    z-index: 999;
-   }
-  .navbar-toggle{
-   visibility: visible;
-
-  }
-
-
-  .navbar-menu.show {
-      display: flex;
-  }
-
-  .navbar-menu li {
-      padding: 10px;
-  }
-      .name{
-       top: 15%;
-       left: 5%;
-      }
-
-       .navbar-brand{
-        font-size: 30px;
-        margin: 0  130px;
-       }
-      .name .newletter button{
-        width: 200px;
-      }
-   #about{
-    top: 10%;
-   }
-     #about p{
-      width: 300px;
-     }
-      #services{
-        height: 1300px;
-      }
-      #services h3{
-        width: 300px;
-      }
-       #contact h2{
-        width: 300px;
-       }
-       #contact{
-        height: 900px;
-       }
-       #contact img{
-        margin: 0 auto;
-        justify-content: space-between;
-
-
-
-       }
-
-
-}
-
-
-@media (min-width: 481px) and (max-width: 768px) {
-  .navbar-menu {
-      justify-content: flex-end;
-  }
-
-  .navbar-menu li {
-      padding: 10px;
-  }
-}
-
-
-@media (min-width: 769px) {
-  .navbar-menu {
-      justify-content: flex-end;
-  }
-
-  .navbar-menu li {
-      padding: 0 15px;
-  }
-}
- @media only screen and (orientation: landscape) {
-
-  #services h3{
-    width: 600px;
-  }
-   #contact{
-    height: 800px;
-    position: relative;
-   }
-   #contact h2 {
-    width: 600px;
-    padding:  50px;
-
-   }
-    .name{
-      height: 400px;
-    }
- }
+  @media (max-width: 450px) {
+                  .navbar-menu {
+                    display: none;
+                    flex-direction: column;
+                    position: absolute;
+                    top: 40px;
+                    left: 0;
+                    height: 100vh;
+                    width: 140px;
+                    background-color: teal;
+                    padding: 10px;
+                     
+                }
+                 .navbar{
+                  z-index: 999;
+                 }
+                .navbar-toggle{
+                 visibility: visible;
+                 
+                }
+                 
+              
+                .navbar-menu.show {
+                    display: flex;
+                }
+              
+                .navbar-menu li {
+                    padding: 10px;
+                }
+                    .name{
+                      width: 200px;
+                     top: 15%;
+                     left: 5%;
+                    }
+                    
+                     .navbar-brand{
+                      font-size: 25px;
+                      margin: 0  80px;
+                     }
+                    .name .newletter button{
+                      width: 200px;
+                    }
+                    #about{
+                      bottom: 500px;
+                    }
+                  #about h2{
+                    margin: 0 10px;
+                  
+                  }
+                  #about img{
+                  
+                  position: relative;
+                    width: 200px;
+                    height: 200px;
+                  }
+                   #about p{
+                    width: 250px;
+                   }
+                      
+                         #services h1{
+                          font-size: 50px;
+                          margin-left: 15px;
+                          margin-top: 150px;
+                         }
+                   #services .wrapper{
+                    display: inline-block;
+                    margin-left: 30px;
+                     
+                   }
+                 
+                    #services .box{
+                      margin: 30px;
+                    }
+                    #services .box-2{
+                      margin: 30px;
+                    }
+                 #skills{
+                  margin-top: 100px;
+                 }
+                         
+                 #skills .skill-1{
+                  margin: 30px;
+                }
+                #skills .skill-2{
+                  margin: 30px;
+                }
+              
+                     #skills .wrapper-2{
+                       display: inline-block;
+                       margin-left: 30px;
+                     }
+                 
+                 #contact h1{
+                     font-size: 50px;
+                 }
+                     #contact h2{
+                      width: 300px;
+                      
+                     }
+                  
+                   #contact img{
+                    width: 900px;
+                   }
+                    
+              
+              }
